# hps-align

./: .gitignore  2019_survey_results.xml  CMakeLists.txt  Doxyfile  README.md  hps-align-env.sh.in  index.html  setup.py
.github/workflows/: docs.yml  doxygen-gh-pages.yml  pycodestyle.yml
cmake/Modules/: MacroModule.cmake
docs/: background.rst  build_docs.rst  conf.py  hps-java-setup.md  hps-java-setup.rst  hps_align.detdump.rst  hps_align.plot.rst  hps_align.rst  hps_align.survey.rst  index.rst  plot_res_and_kinks.rst
scripts/: plot_2D.py  plot_list.json  plot_list_2D.json  plot_res_and_kinks.py
src/hps_align/: __main__.py  _cfg.py  _cli.py  choose.py  plot_res_and_kinks.py
survey_data/: 2019_file_list.json  2019_survey_results.xml  L123_fixture_sho.txt
survey_data/meas1/: L0_axial1_1.txt  L0_axial2_1.txt  L0_axial3_1.txt  L0_axial5_1.txt  L0_bottom_module2_upright_1.txt  L0_fixture_empty_1.txt  L0_stereo3_1.txt  L0_stereo5_1.txt  L0_stereo_bottom_1.txt  L0_stereo_bottom_module2_1.txt  L0_stereo_top_module1_1.txt  L0_top_module1_upright_1.txt  L1_bottom_module5_upright_1.txt  L1_stereo_bottom_module5_1.txt  L1_stereo_top_module3_1.txt  L1_top_upright_module3_1.txt  uchannel_empty_bottom_1.txt  uchannel_empty_top_1.txt  uchannel_full_bottom_1.txt  uchannel_full_top_1.txt  uchannel_noL0_bottom_1.txt  uchannel_noL0_top_1.txt
survey_data/meas2/: L0_axial_bottom_module2_2.txt  L0_axial_top_2.txt  L0_bottom_upright_2.txt  L0_fixture_empty_2.txt  L0_stereo1_2.txt  L0_stereo_bottom_2.txt  L0_top_upright_2.txt  L0_upright5_2.txt  (+11 more)
test/: README.md  survey_results_2019.csv  test_ballframe.py  test_baseplanes.py  test_fixture.py  test_mattballframe.py  test_mattfixture.py  test_mattsensors.py  test_pinframe.py  test_pins.py  test_sensors.py  test_shofixture.py  test_survey.py  test_uchannel.py  test_utils.py
(+90 files in other folders)
